# routes/file.js
@@ -1,9 +1,10 @@
 import { fileUpload } from '../controllers/file.js'
+import { verifyJwt } from '../middlewares/auth.js'
 
 import express from 'express'
 
 const router = express.Router()
 
-router.post('/upload', fileUpload)
+router.post('/upload', verifyJwt, fileUpload)
 
 export default router
