# routes/project.js
@@ -1,6 +1,6 @@
 import express from 'express'
 
-import { projectCreate, projectDelete, projectGet, projectInvite, projectUpdate } from '../controllers/project.js'
+import { projectCreate, projectDelete, projectGet, projectInvite, projectUpdate, projectGetMember } from '../controllers/project.js'
 import { verifyJwt } from '../middlewares/auth.js'
 
 const router = express.Router()
@@ -11,5 +11,6 @@ router.post('/update', verifyJwt, projectUpdate)
 router.post('/delete', verifyJwt, projectDelete)
 
 router.get('/get', verifyJwt, projectGet)
+router.get('/get/members', verifyJwt, projectGetMember)
 
 export default router
